less/header.less
.site-title {
	max-width: var(--page-content-max-width);
	margin: 0 auto .5em auto;
	padding: 1em var(--page-padding) 0 var(--page-padding);
	line-height: 0.8;

	@media (min-width: @breakpoint-desktop) {
		max-width: none;
		margin: 0 auto 2em auto;
		padding: 0;
	}

	a {
		font-family: @font-family-titles;
		font-size: var(--font-size-title);
		font-weight: var(--font-weight-normal);
		color: var(--text-color);
		text-decoration: none;

		&:hover {
			color: var(--text-color-dark);
		}

		@media (min-width: @breakpoint-desktop) {
			font-size: var(--font-size-title-desktop);
		}
	}
}

.main-menu {
	max-width: var(--page-content-max-width);
	margin: 0 auto;
	padding: 0 var(--page-padding);

	@media (min-width: @breakpoint-desktop) {
		flex: 0 0 220px;
		padding: 0;
	}

	.menu {
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		list-style: none;
		font-size: var(--font-size-menu-big);
		line-height: 1.3;
		margin: 0;
		padding: 0;

		@media (min-width: @breakpoint-desktop) {
			flex-direction: column;
			font-size: var(--font-size-menu);
			line-height: var(--line-height-default);
		}

		.menu-item {
			a {
				color: var(--text-color);
				font-weight: var(--font-weight-bold);
				margin-right: .5em;
				text-decoration: none;

				&:hover {
					color: var(--text-color-dark);
				}

				@media (min-width: @breakpoint-desktop) {
					margin-right: 0;
				}
			}

			&.current-menu-item {
				a {
					color: var(--accent-color);
					text-decoration: underline;
					text-decoration-color: var(--accent-color);
					text-underline-offset: .1em;
				}
			}
		}
	}

	.widget {
		padding: 0 2em 0 0;
		list-style: none;

		ul {
			list-style: none;
			padding: 0;
		}
	}
}

.main-menu-divider {
	width: 100%;
	height: 6px;
	margin: 1em 0;
	background-image: url('./img/wave.svg');
	background-repeat: repeat no-repeat;
	background-size: contain;

	@media (min-width: @breakpoint-desktop) {
		display: none;
	}
}

